--- a/source/_posts/博客更新日志.md
+++ b/source/_posts/博客更新日志.md
@@ -1,8 +1,42 @@
 ---
 title: 博客更新日志(持续更新)
-tag: hide
 abbrlink: 4884
 date: 2022-07-20 09:32:52
 tags:
-categories:
+categories: 持续更新
 ---
+本篇文章会持续更新，主要是写本博客的更新日志，也算是一个备忘
+<!-- more -->
+---
+2022-4-5
+本博客于Cloudstudio上搭建完成，发布在Github Pages上
+取名十贰的小窝
+使用next主题v5.x版本
+---
+2022-4-6
+next主题更新到v7.x版本
+博客添加动态背景
+博客字体改为思源宋体
+添加本地搜索栏
+添加abbrlink使文章链接更加清晰
+开启夜晚模式
+开启文章进度条
+---
+2022-7-17
+博客大更新，折腾了四五个小时
+next主题更新到v8.x版本
+hexo更新到v6.x.x版本
+由[木子的博客](blog.k8s.li)所~抄~借鉴过来的styles.styl，博客顿时拥有了格子背景和透明化的板块，非常舒适
+改了一下styles.styl使之适应我的博客
+---
+成功部署Waline评论系统
+---
+2022-7-19
+从黑石博客学了一些骚操作，并将它部署在自己的博客上
+hexo deploy不再使用公钥，而是改为使用Token，方便博客的迁移
+博客源码换了个私有仓库，GIthub Action自动部署。解放双手，你值得拥有
+找同学&朋友测试Waline评论系统
+---
+2022-7-20
+找到了一些Waline评论系统的坑爹设置并尝试修改
+由于styles.styl不适应夜晚模式，故关闭夜晚模式
