--- a/source/_posts/博客更新日志.md
+++ b/source/_posts/博客更新日志.md
@@ -30,7 +30,9 @@ hexo更新到v6.x.x版本
 改了一下styles.styl使之适应我的博客
 ---
 # 2022-7-18
-成功部署Waline评论系统
+~成功部署Waline评论系统~
+~手滑又把它拆了~
+~再次~成功部署Waline评论系统
 ---
 # 2022-7-19
 从黑石博客学了一些骚操作，并将它部署在自己的博客上
@@ -43,3 +45,20 @@ hexo deploy不再使用公钥，而是改为使用Token，方便博客的迁移
 由于styles.styl不适应夜晚模式，故关闭夜晚模式
 添加了好看的二次元风格404.
 ---
+# 2022-7-21
+新增友链界面，开始接受友链啦！^-^
+---
+# 2022-7-25
+更改了```styles.styl```  ```head.swig```  ```post-body-end.swig```
+~优化~拖慢了博客速度
+更新了二次元图片api，更新了404界面
+~增加了一个彩蛋~水了一篇博文
+原定的Darkmode更改计划再次失败
+---
+# 2022-7-26
+入手5个Freenom的免费域名，总所周知这类域名只能拿来图一乐
+GitHub的分站现在改为www.nbplus.gq
+我去，这域名真的是太牛逼了！！
+设置Vercel为主站
+更新了Links.md
+咕咕咕咕咕咕咕咕咕咕咕
