--- a/source/_posts/博客更新日志.md
+++ b/source/_posts/博客更新日志.md
@@ -2,7 +2,7 @@
 title: 博客更新日志(持续更新)
 abbrlink: 4884
 date: 2022-07-20 09:32:52
-tags:
+tags: hexo博客魔改
 categories: 持续更新
 ---
 本篇文章会持续更新，主要是写本博客的更新日志，也算是一个备忘
