--- a/source/_posts/班级电脑的碎碎念.md
+++ b/source/_posts/班级电脑的碎碎念.md
@@ -33,7 +33,7 @@ abbrlink: 15331
 >续费啊！！！续费啊！！！续费啊！！！续费啊！！！续费啊！！！
 
 不知道校领导续了多少年的费还是直接用的破解版白嫖的
-这玩意稳定性非常的玄学，有时候秒传，有时候一个5M的文件接收了20多分站
+这玩意稳定性非常的玄学，有时候秒传，有时候一个5M的文件接收了20多分钟
 真是离奇他妈给离奇开门——离奇到家了
 ---
 # 系统盘惊现Win10破解激活密钥
@@ -45,7 +45,7 @@ abbrlink: 15331
 ---
 # 我直接在电脑上装云盘
 一年多前，在别的同学还在用U盘疯狂的拷着老师的课件时，我灵机一动决定整一个烂活
-~初衷是为了炫耀我暑假里刚搞好的Microsoft365 E5账号（容量625G）~（这该死的虚荣心）
+~初衷是为了炫耀我暑假里刚搞好的Microsoft365 E5账号（容量625TB）~（这该死的虚荣心）
 用OneDrive特别方便，Windows10自带OneDrive同步软件，直接在电脑上登录账号，装逼开始，ShowTime！！！
 （装逼打脸了，OneDrive卡住不动，让我死等了三节下课才搞好
 终于可以优雅的同步老师的所有课件了，舒适无比
