--- a/source/_posts/彩蛋.md
+++ b/source/_posts/彩蛋.md
@@ -13,3 +13,4 @@ categories:
 以下是涩图：
 >https://hehysh-my.sharepoint.com/:i:/g/personal/hehysh_hehysh_onmicrosoft_com/Ed5FXc_GFHtMvE7xjqUIFJsBtXUA7HNC7w2ZQID4UA_j3g?e=pvWH9V
 密码：114514
+哈哈哈，妙啊！
