--- a/source/_posts/博客更新日志.md
+++ b/source/_posts/博客更新日志.md
@@ -62,3 +62,9 @@ GitHub的分站现在改为www.nbplus.gq
 设置Vercel为主站
 更新了Links.md
 咕咕咕咕咕咕咕咕咕咕咕
+---
+# 2022-7-28
+前几天对博客进行了几次微小的更新
+~解决了~增加了更多bug
+完成了我伟大的打包式hexo计划，可以随时迁移，过几天发篇文章
+修改了styles.styl
