--- a/themes/next/languages/zh-CN.yml
+++ b/themes/next/languages/zh-CN.yml
@@ -16,8 +16,9 @@ menu:
   sitemap: 站点地图
   commonweal: 公益 404
   book: 书籍
-  links: 分站/友链
+  links: 友链
   traveling: 开往
+  sec-site: 分站
 sidebar:
   overview: 站点概览
   toc: 文章目录
