--- a/source/_posts/博客更新日志.md
+++ b/source/_posts/博客更新日志.md
@@ -68,3 +68,10 @@ GitHub的分站现在改为www.nbplus.gq
 ~解决了~增加了更多bug
 完成了我伟大的打包式hexo计划，可以随时迁移，过几天发篇文章
 修改了styles.styl
+---
+# 2022-7-31
+加了一个网站监控和一个网站流量监控
+加了个bug超多的黑暗模式
+仙人掌主题的自动同步还没写好，咕咕咕咕咕咕咕
+拒绝了明斯克数学家的增加新功能的要求（咕咕咕咕咕）
+~优化~拖慢了博客速度
