--- a/source/_posts/我的账号又双叒叕被封了.md
+++ b/source/_posts/我的账号又双叒叕被封了.md
@@ -2,8 +2,8 @@
 title: 我的账号又双叒叕被封了
 abbrlink: 30665
 date: 2022-08-10 21:08:16
-tags:
-categories:
+tags: Goorm
+categories: 技术
 ---
 没错，如题。
 这次封的是Goorm账号，检查了一遍服务条款，我发现一个十分狗的操作。
