--- a/source/_posts/画梦-壁炉-木屋-猫.md
+++ b/source/_posts/画梦-壁炉-木屋-猫.md
@@ -2,8 +2,8 @@
 title: 【画梦】《壁炉，木屋，猫》
 abbrlink: 17869
 date: 2022-08-05 20:01:56
-tags:
-categories:
+tags: 画梦
+categories: 生活
 ---
 开始尝试描写自己的梦境
 不出意外【画梦】系列会继续更下去
