--- a/source/_posts/画梦-夜鸦.md
+++ b/source/_posts/画梦-夜鸦.md
@@ -2,8 +2,8 @@
 title: 【画梦】《夜鸦》
 abbrlink: 41548
 date: 2022-08-06 14:50:09
-tags:
-categories:
+tags: 画梦
+categories: 生活
 ---
 这是画梦系列的一部分，顾名思义，复述我的梦境。
 小时候经常做这个梦，梦中的房子是我以前住的房子
